--- a/style.css
+++ b/style.css
@@ -99,6 +99,13 @@ button:hover {
     background: #0056b3;
 }
 
+@media screen and (max-width: 600px) {
+    #app h1{
+        font-size: 1.5rem;
+    }
+    
+}
+
 @media screen and (min-width: 1025px) {
     #header img{
         width: 40%;
